# iip

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: setup-parity.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/dataset-sim/: Cargo.toml
crates/dataset-sim/data/: enterprise.json
crates/dataset-sim/data/applications/: cad-vault.json  compliance-hub.json  energy-monitor.json  excel-macros-local-ops.json  industrial-data-platform-app.json  inventory-pro.json  legacy-reporting-cube.json  maintenance-hub.json  mes-alpha.json  operator-portal.json  plant-scheduler.json  plm-core.json  predictive-insight.json  quality-tracker.json  sap-s4-erp.json
crates/dataset-sim/data/metrics/cad-vault/: legacy-incidents.json
crates/dataset-sim/data/metrics/compliance-hub/: application-logs.json
crates/dataset-sim/data/metrics/energy-monitor/: application-logs.json
crates/dataset-sim/data/metrics/excel-macros-local-ops/: shared-spreadsheets.json
crates/dataset-sim/data/metrics/industrial-data-platform-app/: jenkins.json
crates/dataset-sim/data/metrics/inventory-pro/: application-logs.json
crates/dataset-sim/data/metrics/legacy-reporting-cube/: legacy-incidents.json
crates/dataset-sim/data/metrics/mes-alpha/: service-now.json
crates/dataset-sim/src/: lib.rs  main.rs  raw_dataset.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/webapp/: Cargo.toml  index.html
crates/webapp/src/: lib.rs
docs/: architecture.md  industrial_ecosystem_reference.md  prd.md
scripts/: push-iip.sh
(+22 files in other folders)
